[gd_scene load_steps=9 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://menus/pause_menu/pause_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/game_over_menu/game_over_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/railtrack/railtrack.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/player_train/player_train.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/destination_area/destination_area.tscn" type="PackedScene" id=7]
[ext_resource path="res://gameplay/warning_label/warning_label.tscn" type="PackedScene" id=8]
[ext_resource path="res://main/levels/1.gd" type="Script" id=9]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="gui_canvas" type="CanvasLayer" parent="."]

[node name="dummy_label" type="Label" parent="gui_canvas"]
margin_right = 123.0
margin_bottom = 14.0
text = "This is main scene!"

[node name="pause_menu" parent="gui_canvas" instance=ExtResource( 2 )]
visible = false

[node name="game_over_menu" parent="gui_canvas" instance=ExtResource( 3 )]
visible = false

[node name="railtrack" parent="." instance=ExtResource( 4 )]
position = Vector2( 323.269, 1.12244 )

[node name="player_train" parent="railtrack" instance=ExtResource( 5 )]
position = Vector2( -323.269, -1.12244 )

[node name="destination_area" parent="." instance=ExtResource( 7 )]
position = Vector2( 323.269, 1.12244 )

[node name="warning_label" parent="." instance=ExtResource( 8 )]
visible = false

[node name="levels" type="Node" parent="."]

[node name="0" type="Node2D" parent="levels"]
script = ExtResource( 9 )

[node name="pickup_areas" type="Node2D" parent="."]
[connection signal="game_over" from="." to="." method="_on_main_game_over"]
[connection signal="node_added" from="railtrack" to="railtrack/player_train" method="_on_railtrack_node_added"]
[connection signal="node_removed" from="railtrack" to="railtrack/player_train" method="_on_railtrack_node_removed"]
[connection signal="warning_added" from="railtrack" to="." method="_on_railtrack_warning_added"]
